--- a/package.json
+++ b/package.json
@@ -16,10 +16,7 @@
     "dependencies": {
         "@vitejs/plugin-react": "^4.2.1",
         "@vitejs/plugin-react-refresh": "^1.3.6",
-        "@vitejs/plugin-vue": "^4.5.2",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "vue": "^3.2.36",
-        "vue-loader": "^17.3.1"
+        "react-dom": "^18.2.0"
     }
 }
