--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
-node_modules
+/node_modules
+/public/build
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+package-lock.json
+composer.lock
+.env
+.env.backup
+.env.production
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+auth.json
+npm-debug.log
+yarn-error.log
+/.fleet
