--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=k0munitat_sprint4
 DB_USERNAME=sail
@@ -29,13 +29,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=60b7a45c50e3c4
+MAIL_PASSWORD=e1d5fc360fa43f
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_FROM_ADDRESS="ivansorribes@iesmontsia.org"
+MAIL_FROM_NAME="K0munitat"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
