--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.5.1",
+        "@fortawesome/free-solid-svg-icons": "^6.5.1",
+        "@fortawesome/react-fontawesome": "^0.2.0",
         "@vitejs/plugin-react": "^4.2.1",
         "@vitejs/plugin-react-refresh": "^1.3.6",
         "react": "^18.2.0",
