--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@headlessui/react": "^1.7.18",
+        "@heroicons/react": "^2.1.1",
         "@vitejs/plugin-react": "^4.2.1",
         "@vitejs/plugin-react-refresh": "^1.3.6",
         "react": "^18.2.0",
