--- a/package.json
+++ b/package.json
@@ -6,17 +6,22 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.11.8",
+        "@vitejs/plugin-react": "^4.0.4",
         "autoprefixer": "^10.4.17",
-        "axios": "^1.6.1",
-        "laravel-vite-plugin": "^0.8.0",
+        "axios": "^1.6.4",
+        "bootstrap": "^5.3.1",
+        "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.33",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "tailwindcss": "^3.4.1",
-        "vite": "^4.0.0"
+        "vite": "^5.0.0"
     },
     "dependencies": {
-        "@vitejs/plugin-react": "^4.2.1",
-        "@vitejs/plugin-react-refresh": "^1.3.6",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "@headlessui/react": "^1.7.18",
+        "@heroicons/react": "^2.1.1",
+        "react-refresh": "^0.14.0",
+        "tw-elements-react": "^1.0.0-alpha2"
     }
 }
