--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "autoprefixer": "^10.4.17",
         "axios": "^1.6.4",
         "bootstrap": "^5.3.1",
+        "daisyui": "^4.6.1",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.33",
         "react": "^18.2.0",
@@ -21,6 +22,7 @@
     "dependencies": {
         "@headlessui/react": "^1.7.18",
         "@heroicons/react": "^2.1.1",
+        "@material-tailwind/react": "^2.1.8",
         "react-refresh": "^0.14.0",
         "tw-elements-react": "^1.0.0-alpha2"
     }
