--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "tailwindcss build src/index.css -o src/tailwind.css"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.17",
