--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@vitejs/plugin-react": "^4.2.1",
         "@vitejs/plugin-react-refresh": "^1.3.6",
+        "formik": "^2.4.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     }
