--- a/package.json
+++ b/package.json
@@ -20,18 +20,18 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
-        "@headlessui/react": "^1.7.18",
-        "@heroicons/react": "^2.1.1",
-        "@material-tailwind/react": "^2.1.8",
-        "react-refresh": "^0.14.0",
-        "tw-elements-react": "^1.0.0-alpha2",
         "@fortawesome/fontawesome-svg-core": "^6.5.1",
         "@fortawesome/free-solid-svg-icons": "^6.5.1",
         "@fortawesome/react-fontawesome": "^0.2.0",
+        "@headlessui/react": "^1.7.18",
+        "@heroicons/react": "^2.1.1",
+        "@material-tailwind/react": "^2.1.8",
         "@vitejs/plugin-react": "^4.2.1",
         "@vitejs/plugin-react-refresh": "^1.3.6",
         "formik": "^2.4.5",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-refresh": "^0.14.0",
+        "tw-elements-react": "^1.0.0-alpha2"
     }
 }
