--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@vitejs/plugin-react-refresh": "^1.3.6",
         "formik": "^2.4.5",
         "react": "^18.2.0",
+        "react-big-calendar": "^1.10.1",
         "react-dom": "^18.2.0",
         "react-refresh": "^0.14.0",
         "tw-elements-react": "^1.0.0-alpha2"
