--- a/.env
+++ b/.env
@@ -4,6 +4,9 @@ APP_KEY=base64:rVZ6T0dVMlwQoCtmqBmoJbV62AmQOHAbestoViVdETo=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+WWWGROUP=1000
+WWWUSER=1000
+
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
@@ -62,3 +65,4 @@ SCOUT_DRIVER=meilisearch
 MEILISEARCH_HOST=http://meilisearch:7700
 
 MEILISEARCH_NO_ANALYTICS=false
+
