--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "react": "^18.2.0",
         "react-big-calendar": "^1.10.1",
         "react-dom": "^18.2.0",
+        "react-modal": "^3.16.1",
         "react-refresh": "^0.14.0",
         "tw-elements-react": "^1.0.0-alpha2"
     }
