--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "formik": "^2.4.5",
         "react": "^18.2.0",
         "react-big-calendar": "^1.10.1",
+        "react-datepicker": "^6.1.0",
         "react-dom": "^18.2.0",
         "react-modal": "^3.16.1",
         "react-refresh": "^0.14.0",
