--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "formik": "^2.4.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-paginate": "^8.2.0",
         "react-refresh": "^0.14.0",
         "tw-elements-react": "^1.0.0-alpha2"
     }
