--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
         "@material-tailwind/react": "^2.1.8",
         "@vitejs/plugin-react": "^4.2.1",
         "@vitejs/plugin-react-refresh": "^1.3.6",
+        "ag-grid-react": "^31.1.1",
         "formik": "^2.4.5",
+        "heroicons": "^2.1.1",
         "moment": "^2.30.1",
         "react": "^18.2.0",
         "react-big-calendar": "^1.10.1",
