autenticacio google, facebook, botons unificats

--- a/.env
+++ b/.env
@@ -29,10 +29,10 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=60b7a45c50e3c4
+MAIL_PASSWORD=e1d5fc360fa43f
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
@@ -62,3 +62,10 @@ SCOUT_DRIVER=meilisearch
 MEILISEARCH_HOST=http://meilisearch:7700
 
 MEILISEARCH_NO_ANALYTICS=false
+
+GOOGLE_CLIENT_ID=897785476800-e2j0gn25ga2rqama5a78uvbvim0v720h.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+
+FACEBOOK_CLIENT_ID=1300428563958574
+FACEBOOK_CLIENT_SECRET=89135e27bb8e4aa9e48d1c8319ec89e4
+FACEBOOK_REDIRECT=http://localhost/auth/callback
