--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "react-big-calendar": "^1.10.1",
         "react-datepicker": "^6.1.0",
         "react-dom": "^18.2.0",
+        "react-google-recaptcha-v3": "^1.10.1",
         "react-modal": "^3.16.1",
         "react-paginate": "^8.2.0",
         "react-refresh": "^0.14.0",
