--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "react-modal": "^3.16.1",
         "react-paginate": "^8.2.0",
         "react-refresh": "^0.14.0",
+        "react-scroll": "^1.9.0",
         "tw-elements-react": "^1.0.0-alpha2"
     }
 }
