--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "react-paginate": "^8.2.0",
         "react-refresh": "^0.14.0",
         "react-scroll": "^1.9.0",
+        "react-select": "^5.8.0",
         "tw-elements-react": "^1.0.0-alpha2"
     }
 }
