--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "react-refresh": "^0.14.0",
         "react-scroll": "^1.9.0",
         "react-select": "^5.8.0",
-        "tw-elements-react": "^1.0.0-alpha2"
+        "tw-elements-react": "^1.0.0-alpha2",
+        "yup": "^1.4.0"
     }
 }
