--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@vitejs/plugin-react": "^4.2.1",
         "@vitejs/plugin-react-refresh": "^1.3.6",
         "ag-grid-react": "^31.1.1",
+        "dompurify": "^3.0.11",
         "formik": "^2.4.5",
         "heroicons": "^2.1.1",
         "moment": "^2.30.1",
